deploy/argocd/apps/velero/kustomize/httproute/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-velero-ui-tls
  namespace: velero
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: PLACEHOLDER_GATEWAY_NS  # Patched via Kustomize from gatewayAPI.controller.gatewayNamespace
  to:
    - group: ""
      kind: Secret
      name: velero-ui-cert-tls
